--- a/01_BUILD_DEPLOY_JAVA_PROJECT/Jenkinsfile
+++ b/01_BUILD_DEPLOY_JAVA_PROJECT/Jenkinsfile
@@ -2,12 +2,16 @@ pipeline {
     agent any
 
     stages {
-        stage('clone Repo') {
-            git 'https://github.com/gmuthu22k/jenkins-job-repo.git'
+        stage('Clone Repo') {
+            steps {
+                git 'https://github.com/gmuthu22k/jenkins-job-repo.git'
+            }
         }
 
         stage('Build Docker image') {
-            sh 'docker build -t hello-java-app .'
+            steps {
+                sh 'docker build -t hello-java-app .'
+            }
         }
 
         stage('Run Container') {
