done some correction in the jenkinsfile2

--- a/01_BUILD_DEPLOY_JAVA_PROJECT/Jenkinsfile
+++ b/01_BUILD_DEPLOY_JAVA_PROJECT/Jenkinsfile
@@ -5,7 +5,9 @@ pipeline {
         
         stage('Build Docker image') {
             steps {
-                sh 'docker build -t hello-java-app .'
+                dir('01_BUILD_DEPLOY_JAVA_PROJECT') {
+                    sh 'docker build -t hello-java-app .'
+                }
             }
         }
 
